--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,10 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80000 set() V {'tdh', 't9d', 'tdf', 'tg4', 'tzh', 't3h', 't65', 'tg7', 't8c', 'tzc', 't9f', 't7j', 'tl9', 't98', 'tkd', 't63', 't12', 't8b', 'tv2', 'tmb', 't', 'tcd', 't3b', 'tx5', 'tjc'} V {'t4b', 'tb8', 't17', 'td7', 't9f', 'tqb', 'tr2', 't63', 'tbf', 't64', 'tl2', 'tw6', 'tff', 'tt6', 't0j', 't6j'}\n"
+     ]
+    }
+   ],
    "source": [
+    "import read_object as ro\n",
+    "\n",
+    "\n",
     "class Image:\n",
     "    \"\"\"Image class\n",
     "       properties:\n",
@@ -41,6 +52,9 @@
     "    def __add__(self, other):\n",
     "        \"\"\"Return tags in both images\"\"\"\n",
     "        return self.tags | other.tags\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.orientation + ' ' + str(self.tags)\n",
     "\n",
     "    # def __sub__(self, other):\n",
     "    #     \"\"\"Returns minimum number of tags exclusively in one image \"\"\"\n",
@@ -77,6 +91,8 @@
     "        return image\n",
     "\n",
     "    def tags(self):\n",
+    "        \"\"\"returns all tags in slide \"\"\"\n",
+    "\n",
     "        if self.filled:\n",
     "            if len(self.images) == 2:\n",
     "                return self.images[0] + self.images[1]\n",
@@ -85,15 +101,20 @@
     "        else:\n",
     "            return set()\n",
     "\n",
+    "    def score(self, other):\n",
+    "        \"\"\"Returns the score of a slide progression\"\"\"\n",
+    "        return min(len(self.tags() - other.tags()), len(other.tags() - self.tags()), len(other.tags() & self.tags()))\n",
     "\n",
     "\n",
-    "    def score(self, next):\n",
-    "        pass\n"
+    "if __name__ == '__main__':\n",
+    "    file_name = \"data/e_shiny_selfies.txt\"\n",
+    "    imgs = ro.create_Image(file_name)\n",
+    "    print(imgs[0], imgs[1], imgs[2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +123,7 @@
        "{'cat', 'garden'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +161,7 @@
        "['4']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,16 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sun', 'beach', 'cat'} {'smile', 'selfie'}\n",
+      "{'sun', 'beach', 'cat'}\n",
+      "\n",
+      "{'smile', 'selfie'} {'garden', 'selfie'}\n",
+      "{'smile', 'garden', 'selfie'}\n",
+      "\n",
+      "{'garden', 'selfie'} {'garden', 'cat'}\n",
+      "{'garden', 'cat'}\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<bound method slide.tags of <__main__.slide object at 0x0000026BDFCC79B0>>"
+       "1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,8 +223,11 @@
     "    # Store this lonely vertical image\n",
     "    else:\n",
     "        lonely = i\n",
-    "    \n",
-    "slides[0].tags"
+    "for i in range(len(slides)-1):\n",
+    "    print(images[i].tags, images[i+1].tags)\n",
+    "    print(slides[i].tags())\n",
+    "    print()\n",
+    "slides[1].score(slides[2])"
    ]
   },
   {
