deleted empty slides

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -196,10 +196,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "{'cat', 'garden'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,11 +223,17 @@
     "    # Store this lonely vertical image\n",
     "    else:\n",
     "        lonely = i\n",
+    "        \n",
+    "\n",
     "for i in range(len(slides)-1):\n",
     "    print(images[i].tags, images[i+1].tags)\n",
     "    print(slides[i].tags())\n",
     "    print()\n",
-    "slides[1].score(slides[2])"
+    "    \n",
+    "del slides[count:]\n",
+    "# slides[1].score(slides[2])\n",
+    "# slides[1].images[1].orientation\n",
+    "slides[-1].tags()"
    ]
   },
   {
