output file function

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = \"data/b_lovely_landscapes.txt\"\n",
+    "file_name = \"data/a_example.txt\"\n",
     "# Create list of images\n",
     "imgs = create_Image(file_name)\n",
     "# Create list of slides in order of the file\n",
@@ -79,44 +79,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "80000"
+       "'data/a_example_output.txt'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(slides)"
+    "# slides = slidess\n",
+    "# len(slides)\n",
+    "# slides[0].images[0].id\n",
+    "print(len(slides))\n",
+    "file_name_output = file_name[:-4]\n",
+    "file_name_output+\"_output.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_io.TextIOWrapper name='try_output.txt' mode='w' encoding='cp1252'>"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file_name_output = \"try_output.txt\"\n",
-    "output = open(file_name_output, \"w\")\n",
-    "\n"
+    "def create_file(slides, file_name_output):\n",
+    "#     file_name_output = \"yeeeey_output.txt\"\n",
+    "\n",
+    "    output = open(file_name_output, \"w\")\n",
+    "    with open(file_name_output, \"w\") as f: \n",
+    "        # Write the number of slides\n",
+    "        f.write(str(len(slides))+\"\\n\")\n",
+    "\n",
+    "        # Write per slide the photo id\n",
+    "        for slide in slides:\n",
+    "            line = \"\"\n",
+    "            for i in range(len(slide.images)):\n",
+    "                if i > 0:\n",
+    "                    line += \" \"\n",
+    "                line += str(slide.images[i].id)\n",
+    "            line += \"\\n\"\n",
+    "            # Write line\n",
+    "            f.write(line)\n",
+    "        \n",
+    "file_name_output = \"wooo_output.txt\"\n",
+    "        \n",
+    "create_file(slides, file_name_output)\n",
+    "            \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name_output = file_name+\"_output.txt\"\n",
+    "\n",
+    "def create_file(slides, file_name_output):\n",
+    "    \n",
+    "    with open(file_name_output, \"w\") as f: \n",
+    "        # Write the number of slides\n",
+    "        f.write(str(len(slides))+\"\\n\")\n",
+    "\n",
+    "        # Write per slide the photo id\n",
+    "        for slide in slides:\n",
+    "            line = \"\"\n",
+    "            for i in range(len(slide.images)):\n",
+    "                if i > 0:\n",
+    "                    line += \" \"\n",
+    "                line += str(slide.images[i].id)\n",
+    "            line += \"\\n\"\n",
+    "            # Write line\n",
+    "            f.write(line)\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "create_file(slides, file_name_output)"
    ]
   },
   {
