--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        " 'sun': {0}}"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,41 +243,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tags_dict(file_name):\n",
+    "def get_ids_dict(file_name):\n",
     "    \"\"\"Create list of object Image from text file\"\"\"\n",
     "    # Read file\n",
     "    f = open(file_name, \"r\")\n",
     "\n",
-    "    tags_dict = {}\n",
+    "    ids_dict = {}\n",
     "    counter = 0\n",
     "    # Loop over lines\n",
     "    for line in f.readlines()[1:]:\n",
     "        line = line.replace(\"\\n\", \"\").split(\" \")\n",
     "        \n",
-    "        # Create dictionary\n",
-    "        for tag in line[2:]:\n",
-    "            # Append id to existing key\n",
-    "            if tag in tags_dict:\n",
-    "                tags_dict[tag] = tags_dict[tag] | {counter}\n",
-    "            # Else create new key\n",
-    "            else:\n",
-    "                tags_dict[tag] = {counter}\n",
+    "        ids_dict[counter] = set(line[2:])\n",
     "\n",
     "        counter += 1\n",
     "\n",
-    "    return tags_dict"
+    "    return ids_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'beach', 'cat', 'sun'},\n",
+       " 1: {'selfie', 'smile'},\n",
+       " 2: {'garden', 'selfie'},\n",
+       " 3: {'cat', 'garden'}}"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ids_dict(\"data/a_example.txt\")"
+   ]
   },
   {
    "cell_type": "code",
